--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -273,6 +273,7 @@ deny 2620:7:6001::142;
 deny 2620:7:6001::143;
 deny 2620:7:6001::144;
 deny 2620:7:6001::145;
+deny 2620:7:6001::146;
 deny 2620:7:6001::147;
 deny 2620:7:6001::148;
 deny 2620:7:6001::149;
@@ -313,6 +314,7 @@ deny 2620:7:6001::183;
 deny 2620:7:6001::184;
 deny 2620:7:6001::185;
 deny 2620:7:6001::186;
+deny 2620:7:6001::187;
 deny 2620:7:6001::188;
 deny 2620:7:6001::189;
 deny 2620:7:6001::e664;
@@ -469,7 +471,6 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
-deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
@@ -491,6 +492,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
@@ -708,7 +710,6 @@ deny 2a0f:df00:0:255::199;
 deny 2a0f:df00:0:255::200;
 deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
-deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
