--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -273,6 +273,7 @@ set_real_ip_from 2620:7:6001::142;
 set_real_ip_from 2620:7:6001::143;
 set_real_ip_from 2620:7:6001::144;
 set_real_ip_from 2620:7:6001::145;
+set_real_ip_from 2620:7:6001::146;
 set_real_ip_from 2620:7:6001::147;
 set_real_ip_from 2620:7:6001::148;
 set_real_ip_from 2620:7:6001::149;
@@ -313,6 +314,7 @@ set_real_ip_from 2620:7:6001::183;
 set_real_ip_from 2620:7:6001::184;
 set_real_ip_from 2620:7:6001::185;
 set_real_ip_from 2620:7:6001::186;
+set_real_ip_from 2620:7:6001::187;
 set_real_ip_from 2620:7:6001::188;
 set_real_ip_from 2620:7:6001::189;
 set_real_ip_from 2620:7:6001::e664;
@@ -469,7 +471,6 @@ set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
-set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
@@ -491,6 +492,7 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
+set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -708,7 +710,6 @@ set_real_ip_from 2a0f:df00:0:255::199;
 set_real_ip_from 2a0f:df00:0:255::200;
 set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
-set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
