--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,5 +1,4 @@
 allow 102.130.113.9;
-allow 102.130.123.16;
 allow 102.130.127.117;
 allow 102.219.85.85;
 allow 103.109.101.105;
@@ -7,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -154,6 +154,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 155.4.102.252;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -541,6 +542,7 @@ allow 185.29.8.215;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
+allow 185.39.207.83;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
@@ -1008,7 +1010,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1031,8 +1032,8 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
+allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
@@ -1374,6 +1375,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
+allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
@@ -1382,6 +1384,7 @@ allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
+allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
@@ -1659,7 +1662,9 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.198.126.87;
 allow 45.12.3.80;
+allow 45.128.232.151;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1722,7 +1727,6 @@ allow 45.95.169.224;
 allow 45.95.169.225;
 allow 45.95.169.227;
 allow 45.95.169.228;
-allow 45.95.169.229;
 allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.166.139.111;
@@ -1783,7 +1787,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.210.193.242;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
