--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,5 +1,4 @@
 deny 102.130.113.9;
-deny 102.130.123.16;
 deny 102.130.127.117;
 deny 102.219.85.85;
 deny 103.109.101.105;
@@ -7,6 +6,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -154,6 +154,7 @@ deny 151.80.148.159;
 deny 152.89.233.169;
 deny 155.4.102.252;
 deny 160.119.249.240;
+deny 161.35.129.51;
 deny 162.247.72.192;
 deny 162.247.72.199;
 deny 162.247.74.200;
@@ -541,6 +542,7 @@ deny 185.29.8.215;
 deny 185.34.33.2;
 deny 185.35.202.222;
 deny 185.38.175.133;
+deny 185.39.207.83;
 deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
@@ -1008,7 +1010,6 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.239;
 deny 23.94.211.25;
@@ -1031,8 +1032,8 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
+deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
 deny 2602:fc24:11:aabe::1;
@@ -1374,6 +1375,7 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
+deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
@@ -1382,6 +1384,7 @@ deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
+deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
 deny 2a05:b0c7:6cd8::1;
@@ -1659,7 +1662,9 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
+deny 44.198.126.87;
 deny 45.12.3.80;
+deny 45.128.232.151;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.135.132.20;
@@ -1722,7 +1727,6 @@ deny 45.95.169.224;
 deny 45.95.169.225;
 deny 45.95.169.227;
 deny 45.95.169.228;
-deny 45.95.169.229;
 deny 45.95.169.255;
 deny 45.95.202.48;
 deny 46.166.139.111;
@@ -1783,7 +1787,6 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 54.210.193.242;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
