--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -129,8 +129,8 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
+set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:66c4::1;
 set_real_ip_from 2602:fc24:11:aabe::1;
@@ -471,6 +471,7 @@ set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
+set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
@@ -479,6 +480,7 @@ set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b6c::1;
+set_real_ip_from 2a05:b0c7:6b72::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6c28::1;
 set_real_ip_from 2a05:b0c7:6cd8::1;
