--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,6 +101,7 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.201.133.100;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -173,7 +174,6 @@ allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
-allow 168.100.8.44;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -182,7 +182,6 @@ allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
-allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.232.161.205;
 allow 172.81.131.139;
@@ -298,7 +297,6 @@ allow 185.195.71.8;
 allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
-allow 185.216.68.128;
 allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
@@ -562,8 +560,6 @@ allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.252.220.31;
 allow 191.96.165.34;
-allow 192.153.57.177;
-allow 192.153.57.19;
 allow 192.210.255.181;
 allow 192.42.116.13;
 allow 192.42.116.14;
@@ -673,6 +669,7 @@ allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
 allow 198.144.178.163;
+allow 198.167.206.144;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -945,7 +942,6 @@ allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
-allow 206.188.196.161;
 allow 206.237.98.52;
 allow 209.141.32.198;
 allow 209.141.38.110;
@@ -1008,6 +1004,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.184.48.208;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1041,6 +1038,7 @@ allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:df04::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
@@ -1253,7 +1251,6 @@ allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
-allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -1629,6 +1626,7 @@ allow 2a12:1e01::2;
 allow 2a12:3e80:2:29::;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
+allow 2a12:5940:1733::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
@@ -1700,7 +1698,6 @@ allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
-allow 45.61.137.5;
 allow 45.61.184.47;
 allow 45.61.185.172;
 allow 45.66.35.10;
@@ -1736,7 +1733,6 @@ allow 46.38.255.27;
 allow 46.41.150.103;
 allow 47.243.103.140;
 allow 47.243.74.136;
-allow 50.16.206.21;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
@@ -1787,6 +1783,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.144.28.196;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
