--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -140,6 +140,7 @@ allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:df04::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
@@ -351,7 +352,6 @@ allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
-allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -727,6 +727,7 @@ allow 2a12:1e01::2;
 allow 2a12:3e80:2:29::;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
+allow 2a12:5940:1733::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
